assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Bangers&family=Special+Elite&display=swap');

* {
    margin: 0;
    padding: 0;
    border: none;
    box-sizing: border-box;
}

body {
    font-weight: 300;
    color: #3a3a3a;
    font-size: 18px;
    background: url("../images/background.jpg") no-repeat center 20%;
    background-attachment: fixed;
    background-size: cover;
}

h1 {
    font-family: 'Bangers', cursive;
}

header {
    font-family: 'Special Elite', cursive;
    height: 10%;
    padding: 30px 20px;
    text-align: center;
    background-image: linear-gradient(#fff 33%, #3395dc00);
    font-weight: bold;
}

header a {
    text-decoration: none;
    color: #3a3a3a;
}

header h1 {
    margin-bottom: 3px;
}

header h2 {
    font-size: 21px;
    margin-bottom: 10px;

}

#sound-control {
    margin: 0 auto;
    height: 20px;
    width: 100%;
    padding: 15px;
}

#sound-control i {
    font-size: 30px;
}

#sound-control i:hover {
    cursor: pointer;
}

.sound-inactive {
    display: none;
}


#game-prefferences {
    width: 90%;
    height: 300px;
    background-color: #ffffffa3;
    margin: 0 auto;
    border-radius: 25px;
    padding: 30px;
    text-align: center;
    font-weight: bold;
    position: relative;
}

#game-prefferences li {
    list-style-type: none;
    margin: 20px auto;
    width: 78%;
    background-color: #22b3e5ed;
    padding: 5px;
    color: white;
    font-weight: bold;
    letter-spacing: 2px;
    border-radius: 20px;
    border: 1px solid dodgerblue;
    box-shadow: rgb(99 99 99 / 20%) 0px 2px 8px 0px;
    text-transform: uppercase;
    transition: 0.2s ease-out;

}

#game-prefferences li:hover {
    background-color: #77469b;
    border: 1px solid #522f6c;
    cursor: pointer;
}

.level-active {
    background-color: #77469b;
    border: 1px solid #522f6c;
}

#game-prefferences button {
    color: #3a3a3a;
    font-weight: bold;
    padding: 10px 40px;
    font-size: 17px;
    background-color: #fff;
    border: 1px solid #3a3a3a;
    border-radius: 5px;
    box-shadow: rgba(0, 0, 0, 0.2) 0px 18px 50px -10px;

}

#game-prefferences button:hover{
    cursor: pointer;
    transform: scale(1.1);
}
#game-prefferences img {
    height: 200px;
    float: right;
    position: absolute;
    right: -4%;
    top: 73%;
}

footer {
    width: 100%;
    height: 80px;
    background-color: #3395dc;
    position: absolute;
    bottom: 0%;
    z-index: -1;
}

footer ul {
    display: flex;
    align-items: center;
    justify-content: space-evenly;
    list-style-type: none;
    position: relative;
    top: 50%;
    transform: translateY(-50%);
}

footer li {
    border: 2px solid #fff0;
    border-radius: 50px;
    height: 40px;
    width: 40px;
    text-align: center;
    transition: border 0.1s ease-in;

}

footer li:hover {
    border: 2px solid #fff;
}

footer a {
    color: white;
    transition: 0.2s ease-out;
    font-size: 25px;
    position: relative;
    top: 15%;
}

